k8s-manifests/00-namespace-configmap.yaml
---
# Crear namespace de LogiFlow
apiVersion: v1
kind: Namespace
metadata:
  name: logiflow
  labels:
    app: logiflow
